using CropCare.Interfaces;
using System.ComponentModel;
using Newtonsoft.Json;

namespace CropCare.Models
{
    public class User : INotifyPropertyChanged, IHasKey
    {
        public event PropertyChangedEventHandler PropertyChanged;
        private List<string> farmKeys;

        public string Key { get; set; }
        public string Email { get; set; }
        public string Name { get; set; }
        public bool IsOwner { get; set; }
        public List<string> FarmKeys 
        {
            get
            {
                return farmKeys ??= new List<string>();
            }
            set
            {
                if (value != null)
                    farmKeys = value;
            } 
        }
        [JsonIgnore]
        public bool IsAssigned { get; set; }

        public User(string email, string name, bool isOwner)
        {
            Email = email;
            Name = name;
            IsOwner = isOwner;
        }
    }
}