classDiagram
    class Farm {
        + Key
        + Name
        + DeviceId
        + PropertyChanged
        + InvokeMethodAsync(methodName: MethodName, parametersJSON: string): Task
    }
    class User {
        + Key
        + Email
        + Name
        + IsOwner
        + FarmKeys
        + IsAssigned
        + PropertyChanged
    }
    class UserToFarm {
        + Key
        + UserId
        + FarmId
    }
    Farm -- UserToFarm : Has many
    User -- UserToFarm : Has many